--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   body {
     font-family: Arial, sans-serif;
     background-image: url(ran.jpeg);
-    margin: 0;
+    margin: auto;
     padding: 0;
     display: flex;
     justify-content: center;
